[package]
name = "smooth-buffer"
version = "0.2.0"
edition = "2021"
description = "A simple ring buffer that can average values without iterating"
license = "MIT"
repository = "https://github.com/chipmusic/smooth_buffer"
documentation = "https://docs.rs/smooth-buffer/latest/smooth_buffer/"
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.8"
